# CanvusPythonAPI

./: .gitignore  EXAMPLES.md  LICENSE  LLM_DEV_GUIDE.md  PRD.md  README.md  SDK_ENHANCEMENT_PLAN.md  TASKS.md  config.json  debug_cross_canvas_search.py  debug_search.py  manual_relative_analysis_summary_20250720_002917.md  manual_visual_relative_test_results_20250720_002917.csv  manual_visual_relative_test_results_20250720_002917.json  pyproject.toml  simple_data_collection_results.csv  simple_data_collection_results.json  test_live_search.py  visual_analysis_summary_20250719_231226.md  visual_parent_id_test_results_20250719_231226.csv  visual_parent_id_test_results_20250719_231226.json
.cursor/rules/: core.mdc  llm_developer_workflow.mdc  mcp-server-workflow.mdc  python-standards.mdc  task-management.mdc  windows-powershell-development.mdc
Docs/: AccessTokens_API.md  BUGS!.md  ChangeLog.md  Comprehensive_API_Table.md  Videos_API.md  Workspaces_API.md
canvus_api/: __init__.py  client.py  exceptions.py  export.py  filters.py  geometry.py  models.py  search.py  widget_operations.py
examples/: export_example.py
parent_id_fix_investigation/: README.md  analysis_results.md  final_analysis_results.md  manual_visual_test.py  manual_visual_test_relative_coords.py  simple_investigation.py  test_parent_id_changes.py  test_visual_parent_changes.py
tests/: CANVAS_TESTING_GUIDE.md  CLIENT_TESTING_GUIDE.md  README.md  __init__.py  auto_test_full.py  conftest.py  test_advanced_widget_operations.py  test_asset_integration.py  test_audit_log_integration.py  test_canvas_resources.py  test_canvus_api.py  test_circular_parenting.py  test_client_manager.py  test_client_operations.py  test_comprehensive_canvas.py  test_comprehensive_folders.py  test_comprehensive_groups.py  test_comprehensive_server.py  test_comprehensive_users.py  test_config.json  test_config.py  test_enhanced_error_handling.py  test_export.py  test_export_integration.py  test_filter_integration.py  test_filter_server_integration.py  test_filters.py  test_geometry.py  test_geometry_integration.py  test_group_operations.py  test_integration_example.py  test_license_methods.py  test_mipmap_integration.py  test_mipmap_methods.py  test_models.py  test_search.py  test_search_integration.py  test_server_connection.py  test_server_functions.py  test_token_management.py  (+5 more)
