[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canvus-api"
version = "0.1.0"
description = "A Python client library for interacting with Canvus servers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["canvus", "api", "client"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/canvus-api"
Documentation = "https://github.com/yourusername/canvus-api#readme"
Repository = "https://github.com/yourusername/canvus-api.git"

[tool.hatch.build.targets.wheel]
packages = ["canvus_api"] 