[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canvus-api"
version = "1.0.0"
description = "A comprehensive Python client library for the Canvus API with full endpoint coverage, advanced features, and comprehensive testing"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["canvus", "api", "client", "canvas", "collaboration"]
authors = [
    { name = "Effective Tech Solutions Kft", email = "support@effectivetechsolutions.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/jaypaulb/CanvusPythonAPI"
Documentation = "https://github.com/jaypaulb/CanvusPythonAPI#readme"
Repository = "https://github.com/jaypaulb/CanvusPythonAPI.git"
Issues = "https://github.com/jaypaulb/CanvusPythonAPI/issues"

[tool.hatch.build.targets.wheel]
packages = ["canvus_api"] 